// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineProgress renders with colors 1`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 4px;
  width: 320px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #fcc;
  width: 100%;
  border-radius: calc(4px / 2);
  height: 4px;
}

.emotion-3 {
  position: absolute;
  width: 0%;
  border-radius: calc(4px / 2);
  background-color: #ff4747;
  height: 4px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress-red"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    0%
  </span>
</div>
`;

exports[`LineProgress renders with colors 2`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 4px;
  width: 320px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #ebebeb;
  width: 100%;
  border-radius: calc(4px / 2);
  height: 4px;
}

.emotion-3 {
  position: absolute;
  width: 0%;
  border-radius: calc(4px / 2);
  background-color: #1f1f1f;
  height: 4px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress-gray"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    0%
  </span>
</div>
`;

exports[`LineProgress renders with colors 3`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 4px;
  width: 320px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #321321;
  width: 100%;
  border-radius: calc(4px / 2);
  height: 4px;
}

.emotion-3 {
  position: absolute;
  width: 0%;
  border-radius: calc(4px / 2);
  background-color: #123123;
  height: 4px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress-custom"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    0%
  </span>
</div>
`;

exports[`LineProgress renders with custom width 1`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 10px;
  width: 100px;
  position: relative;
}

.emotion-2 {
  position: absolute;
  background-color: #ebebeb;
  width: 100%;
  border-radius: calc(10px / 2);
  height: 10px;
}

.emotion-3 {
  position: absolute;
  width: 50%;
  border-radius: calc(10px / 2);
  background-color: #1e6fff;
  height: 10px;
}

.emotion-4 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    />
    <div
      class="emotion-3"
    />
  </div>
  <span
    class="emotion-4"
  >
    50%
  </span>
</div>
`;

exports[`LineProgress renders with steps 1`] = `
.emotion-0 {
  vertical-align: middle;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 {
  display: inline-block;
  height: 4px;
  width: 320px;
  position: relative;
}

.emotion-2 {
  width: 100%;
  position: absolute;
}

.emotion-3 {
  display: inline-flex;
  vertical-align: middle;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  height: 100%;
  display: inline-flex;
  margin-right: 4px;
  margin-bottom: 0px;
}

.emotion-5 {
  background-color: #ebebeb;
  width: calc((320px - (3 - 1) * 4px) / 3);
  border-radius: calc(4px / 2);
  height: 4px;
}

.emotion-8 {
  height: 100%;
  display: inline-flex;
  margin-right: 0px;
  margin-bottom: 0px;
}

.emotion-13 {
  width: 0px;
  border-radius: calc(4px / 2);
  background-color: #1e6fff;
  height: 4px;
}

.emotion-18 {
  margin-left: 8px;
  line-height: 14px;
  font-size: 14px;
  color: #999;
}

<div
  class="emotion-0"
  data-testid="test-line-progress"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-5"
        />
      </div>
      <div
        class="emotion-8"
      >
        <div
          class="emotion-5"
        />
      </div>
    </div>
    <div
      class="emotion-2 emotion-3"
    >
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        />
      </div>
      <div
        class="emotion-4"
      >
        <div
          class="emotion-13"
        />
      </div>
      <div
        class="emotion-8"
      >
        <div
          class="emotion-13"
        />
      </div>
    </div>
  </div>
  <span
    class="emotion-18"
  >
    0%
  </span>
</div>
`;
